Rewrite URI as well when testing quirks mode